--- a/emails/welcome.html
+++ b/emails/welcome.html
@@ -328,8 +328,8 @@
   </head>
   <body>
     <span class="preheader">
-      Thanks for trying out SupaVacation. We’ve pulled together some information
-      and resources to help you get started.</span
+      Thanks for trying out Loomer. We’ve pulled together some information and
+      resources to help you get started.</span
     >
     <table
       class="email-wrapper"
@@ -350,7 +350,7 @@
             <tr>
               <td class="email-masthead">
                 <a href="{{base_url}}" class="f-fallback email-masthead_name">
-                  ✨ SupaVacation
+                  ✨ Loomer
                 </a>
               </td>
             </tr>
@@ -389,9 +389,9 @@
                         </p>
                         <p>
                           We're looking forward to helping you succeed with
-                          SupaVacation.
+                          Loomer.
                         </p>
-                        <p>Thanks, <br />The SupaVacation Team</p>
+                        <p>Thanks, <br />The Loomer Team</p>
                       </div>
                     </td>
                   </tr>
@@ -411,7 +411,7 @@
                   <tr>
                     <td class="content-cell" align="center">
                       <p class="f-fallback sub align-center">
-                        &copy; 2022 SupaVacation. All rights reserved.
+                        &copy; 2022 Loomer. All rights reserved.
                       </p>
                     </td>
                   </tr>
