--- a/emails/confirm-email.html
+++ b/emails/confirm-email.html
@@ -19,7 +19,7 @@
       }
 
       a {
-        color: #f43f5e;
+        color: #2563eb;
       }
 
       a img {
@@ -106,11 +106,11 @@
       /* Buttons ------------------------------ */
 
       .button {
-        background-color: #f43f5e;
-        border-top: 10px solid #f43f5e;
-        border-right: 18px solid #f43f5e;
-        border-bottom: 10px solid #f43f5e;
-        border-left: 18px solid #f43f5e;
+        background-color: #2563eb;
+        border-top: 10px solid #2563eb;
+        border-right: 18px solid #2563eb;
+        border-bottom: 10px solid #2563eb;
+        border-left: 18px solid #2563eb;
         display: inline-block;
         color: #fff !important;
         text-decoration: none;
